tests/help-show-code.stderr
error: 
   ┌─ test:11:1
   │
11 │ Compatible foo bar
   │ ^^^^^^^^^^ `foo` is not compatible with `bar`
   │
   = for more information, see https://wipple.dev/playground/?lesson=errors/missing-instance

